I don't know how to write
Thanks, Gali.

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
 	<div>
 		<h3>אני יכול לשלוח לך באגים שאני מוצא או פיצ׳רים שאני רוצה או דברים בסגנון?</h3>
-		<p>בטח. יש את <a href="https://www.facebook.com/trainsapp">עמוד הפייסבוק</a>, שמשום מה לינק אליו באייפון לא יפתח את האפליקציה (במקום זה אפשר לחפש ״רכבות״ בפייסבוק), ויש את האימייל <a href="mailto:support@trainsapp.com">support@trainsapp.com</a> הבחירה בידיך. אם הבחירה היתה בעמוד הפייסבוק אז לייק יהיה ממש נחמד :)</p>
+		<p>בטח. יש את <a href="https://www.facebook.com/trainsapp">עמוד הפייסבוק</a>, שמשום מה לינק אליו באייפון לא יפתח את האפליקציה (במקום זה אפשר לחפש ״רכבות״ בפייסבוק), ויש את האימייל <a href="mailto:support@trainsapp.com">support@trainsapp.com</a>. הבחירה בידייך. אם הבחירה היתה בעמוד הפייסבוק אז לייק יהיה ממש נחמד :)</p>
 	</div>
 
 	<div>
