Mention the death of the app

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="apple-touch-icon-precomposed" href="favicon-152.png" />
 
-    <title>רכבות - אפליקציה לאייפון</title>
+    <title>רכבות - אפליקציה מתה לאייפון</title>
 
     <style type="text/css">
       @font-face {
@@ -49,8 +49,12 @@
 
       #main-text {
         flex: 0 1 auto;
-        padding: 0 15px;
+        padding: 0 30px;
         text-align: center;
+      }
+
+      #main-text h1 {
+        text-decoration: line-through;
       }
 
       @media (max-width: 800px) {
@@ -151,7 +155,7 @@
       <img id="iphone-image" src="website_iphone_image.png" />
       <div id="main-text">
         <h1>רכבות</h1>
-        <p>אפליקציה קטנה ומהירה לרכבת</p>
+        <p>אפליקציה קטנה, מהירה ומתה לרכבת</p>
         <div class="app-store-badge">
           <a href="#"><img src="app_store_badge.svg" /></a>
         </div>
